# project-rust

./: .env  Cargo.toml  docker-compose.yml
src/: main.rs
src/db/: connection.rs  mod.rs
src/handlers/: category_handler.rs  detail_content_handler.rs  home_handler.rs  mod.rs  publishers_handler.rs
src/helpers/: response.rs
src/models/: detail_content.rs  mod.rs  publishers.rs
src/routes/: category_routes.rs  detail_content_routes.rs  home_routes.rs  mod.rs  publishers_routes.rs
