[package]
name = "voi-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }  # Pastikan menggunakan tokio dengan fitur lengkap
tokio-postgres = { version = "0.7", features = [] }  # Menghapus fitur chrono dari tokio-postgres
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }  # Menambahkan chrono secara terpisah
dotenv = "0.15"  # Untuk memuat variabel lingkungan dari file .env
env_logger = "0.10.0"

[[bin]]
name = "voi-rust"
path = "src/main.rs"
